# Rivid_Task

./: RIDIV_Assignment.postman_collection.json  Readme.md
ridiv_assign/: db.sqlite3  manage.py  pyproject.toml
ridiv_assign/myapp/: models.py  tests.py  urls.py
ridiv_assign/myapp/migrations/: 0001_initial.py
ridiv_assign/ridiv_assign/: asgi.py  settings.py  urls.py  wsgi.py
